# openapi.yml
@@ -25,12 +25,12 @@ paths:
       responses:
         '201':
           description: >
-            A confirmation that the build process has started along with
-            some informations about the image to be build
+            A confirmation that the build process has started along 
+            with the imageId
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ImageInfo'
+                $ref: '#/components/schemas/ImageId'
         '400':
           description: Invalid ImageConfig Object
           content:
